--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
             
         </section>
-        <div class="btn btn-primary position-fixed bottom-50 end-0">
+        <div class="btn btn-primary position-fixed bottom-50 end-0" id="botonArriba">
           <a class="text-white" href="#nombre">^</a>
         </div>
         <h3 class="text-info-emphasis text-center text-decoration-underline mt-3">Certificados</h3>
