--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </nav>
       <main class="card" >
-        <!-- **********EDUCACION********** -->
+      <!-- **********EDUCACION********** -->
         <section class="bg-info-subtle">
             <h3 class="text-info-emphasis text-center text-decoration-underline mt-3">Educación</h3>
             <ul class="list">
@@ -59,14 +59,14 @@
                 <li>2023</li>
                 <li>Professional Front End Developer</li>
             </ul>
-         <!-- **********BOTON SUBIR********** -->   
+      <!-- **********BOTON SUBIR********** -->   
         </section>
         <div class="btn btn-primary position-fixed bottom-50 end-0" id="botonArriba">
           <a class="text-white" href="#nombre">
             <i class="bi bi-capslock"></i>
           </a>
         </div>
-        <!-- **********CERTIFICADOS********** -->
+      <!-- **********CERTIFICADOS********** -->
         <h3 class="text-info-emphasis text-center text-decoration-underline mt-3">Certificados</h3>
         <section id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -92,7 +92,7 @@
               <span class="visually-hidden">Next</span>
             </button>
         </section>
-        <!-- **********HABILIDADES********** -->
+      <!-- **********HABILIDADES********** -->
         <section class="bg-success-subtle container">
             <h3 class="text-info-emphasis text-center text-decoration-underline mt-3" id="habilidades">Habilidades</h3>
             <div class="row">
@@ -108,7 +108,7 @@
                 <img src="./assets/Imagenes/Logo Wonder.png" class="col-2 mx-auto my-3 rounded imgIcono" alt="logoWonder">
             </div>
         </section>  
-        <!-- **********ALGUNOS TRABAJOS********** -->
+      <!-- **********ALGUNOS TRABAJOS********** -->
         <section class="bg-warning-subtle pb-3 container">
           <h3 class="text-info-emphasis text-center text-decoration-underline mt-3" id="trabajos">Algunos Trabajos</h3>   
           <div id="carouselAutoplaying2" class="carousel carousel slide" data-bs-ride="carousel">
@@ -154,22 +154,22 @@
             </button>
           </div> 
         </section>  
-        <!-- **********FORMULARIO CONTACTO********** -->
+      <!-- **********FORMULARIO CONTACTO********** -->
         <section class="bg-warning">
           <h3 class="text-info-emphasis text-center text-decoration-underline mt-3" id="contacto">Contacto</h3> 
           <form class="px-5" action="https://formspree.io/f/mqkrzwqa" method="post">
             <div class="mb-3">
               <label class="form-label fs-4" for="nombre">Nombre</label>
-              <input class="form-control w-50" type="text" id="nombre" name="nombre">
+              <input class="form-control w-100 formulario" type="text" id="nombre" name="nombre">
             </div>
             <div class="form-floating my-3">
-              <input class="form-control w-50" type="email" id="email" name="email" placeholder="bla">
+              <input class="form-control w-100 formulario" type="email" id="email" name="email" placeholder="bla">
               <label class="form-labell" for="email">Email</label>
             </div>
 
             <div class="mb-3">
               <label for="mensaje" class="form-label fs-4">Mensaje</label>
-              <textarea class="form-control  w-75" id="mensaje" name="message" rows="5"></textarea>
+              <textarea class="form-control  w-100 textFormulario" id="mensaje" name="message" rows="5"></textarea>
             </div>
             
             <input class="btn btn-success mb-3" type="submit" value="Enviar">
@@ -179,7 +179,7 @@
       <!-- **********FOOTER********** -->
       <footer class="container-fluid bg-secondary px-5 py-3">
         <div class="row">
-          <div class="col-8 text-start fs-3 pb-4">
+          <div class="col-8 text-start fs-3 pb-2">
             <img src="./assets/Imagenes/FotoCV.png" alt="Foto" width="50" height="44" class="d-inline-block align-text-center rounded-circle">
             Diego A. Esposito
             <div>
@@ -199,7 +199,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-4" id="infoContacto">
             <ul class="redes">
               <li class="fs-3 text-decoration-underline">Info de Contacto</li>
               <li><i class="bi bi-telephone-fill"></i> diegoesp79@hotmail.com</li>
