--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="row">
         <h1 class="col-8 text-center mt-1" id="nombre">Diego A. Esposito</h1>
         <img class="col-2 rounded-circle" height="100%"  src="/assets/Imagenes/FotoCV.png" alt="Foto">
-        <p class="col-12 text-center ">En mi papel como Técnico en Electrónica, desarrollé y llevé a cabo proyectos y mejoras significativas para el área, siempre aportando la experiencia, la seguridad y la calidad.</p>
-        <p class="col-12 text-center ">Como programador en la industria desarrolle automatismos, Scadas y demás, para generar el control a distancia de diferentes sistemas y equipos, con más de 20 años de experiencia.</p>
+        <p class="col-12 text-center ">En mi papel como Técnico en Electrónica, desarrollé y llevé a cabo proyectos y mejoras significativas para el área, siempre aportando experiencia, seguridad y calidad.</p>
+        <p class="col-12 text-center ">Como programador en la industria desarrollé automatismos, Scadas y demás, para generar el control a distancia de diferentes sistemas y equipos, con más de 20 años de experiencia.</p>
         </div>
     </header>
     <nav class="navbar bg-body-tertiary">
