ultima versión header plc

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body class="bg-body-secondary">
     <header class="bg-primary-subtle container text-center">
         <div class="row">
-        <h1 class="col-8 text-center mt-1" id="nombre">Diego A. Esposito</h1>
+        <h1 class="col-8 text-center mt-1 text-white" id="nombre">Diego A. Esposito</h1>
         <img class="col-2 rounded-circle" height="100%"  src="/assets/Imagenes/FotoCV.png" alt="Foto">
-        <p class="col-12 text-center ">En mi papel como Técnico en Electrónica, desarrollé y llevé a cabo proyectos y mejoras significativas para el área, siempre aportando experiencia, seguridad y calidad.</p>
-        <p class="col-12 text-center ">Como programador en la industria desarrollé automatismos, Scadas y demás, para generar el control a distancia de diferentes sistemas y equipos, con más de 20 años de experiencia.</p>
+        <p class="col-12 text-center text-white bg-secondary">En mi papel como Técnico en Electrónica, desarrollé y llevé a cabo proyectos y mejoras significativas para el área, siempre aportando experiencia, seguridad y calidad.</p>
+        <p class="col-12 text-center text-white bg-secondary">Como programador en la industria desarrollé automatismos, Scadas y demás, para generar el control a distancia de diferentes sistemas y equipos, con más de 20 años de experiencia.</p>
         </div>
     </header>
     <nav class="navbar bg-body-tertiary">
@@ -155,7 +155,7 @@
           </div> 
         </section>  
       <!-- **********FORMULARIO CONTACTO********** -->
-        <section class="bg-warning">
+        <section class="bg-warning bg-gradient">
           <h3 class="text-info-emphasis text-center text-decoration-underline mt-3" id="contacto">Contacto</h3> 
           <form class="px-5" action="https://formspree.io/f/mqkrzwqa" method="post">
             <div class="mb-3">
@@ -192,7 +192,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#" target="_blank" class="linkedin">
+                  <a href="https://www.linkedin.com/in/diego-alejandro-esposito-91b310128" target="_blank" class="linkedin">
                     <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"><path d="M19.039,19.043H16.078V14.4c0-1.106-.023-2.53-1.544-2.53-1.544,0-1.78,1.2-1.78,2.449v4.722H9.792V9.5h2.845v1.3h.039a3.12,3.12,0,0,1,2.808-1.542c3,0,3.556,1.975,3.556,4.546v5.238ZM6.447,8.194A1.72,1.72,0,1,1,8.168,6.473,1.719,1.719,0,0,1,6.447,8.194ZM7.932,19.043H4.963V9.5H7.932ZM20.521,2H3.476A1.458,1.458,0,0,0,2,3.441V20.559A1.458,1.458,0,0,0,3.476,22H20.518A1.463,1.463,0,0,0,22,20.559V3.441A1.464,1.464,0,0,0,20.518,2Z" fill="black"></path></svg>
                   </a>
                 </li>
