correción en iconos footer

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
           <div class="col-12" id="infoContacto">
             <ul class="redes">
               <li class="fs-3 text-decoration-underline">Info de Contacto</li>
-              <li><i class="bi bi-telephone-fill"></i> diegoesp79@hotmail.com</li>
-              <li><i class="bi bi-envelope-at"></i> +54 011-3019-4262</li>
+              <li><i class="bi bi-envelope-at"></i> diegoesp79@hotmail.com</li>
+              <li><i class="bi bi-telephone-fill"></i> +54 011-3019-4262</li>
             </ul>
           </div>
         </div>
