cambio de img header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="row">
         <h1 class="col-8 text-center mt-1 text-white" id="nombre">Diego A. Esposito</h1>
         <img class="col-2 rounded-circle" height="100%"  src="/assets/Imagenes/FotoCV.png" alt="Foto">
-        <p class="col-12 text-center text-white bg-secondary">En mi papel como Técnico en Electrónica, desarrollé y llevé a cabo proyectos y mejoras significativas para el área, siempre aportando experiencia, seguridad y calidad.</p>
-        <p class="col-12 text-center text-white bg-secondary">Como programador en la industria desarrollé automatismos, Scadas y demás, para generar el control a distancia de diferentes sistemas y equipos, con más de 20 años de experiencia.</p>
+        <p class="col-12 text-center text-white ">En mi papel como Técnico en Electrónica, desarrollé y llevé a cabo proyectos y mejoras significativas para el área, siempre aportando experiencia, seguridad y calidad.</p>
+        <p class="col-12 text-center text-white ">Como programador en la industria desarrollé automatismos, Scadas y demás, para generar el control a distancia de diferentes sistemas y equipos, con más de 20 años de experiencia.</p>
         </div>
     </header>
     <nav class="navbar bg-body-tertiary">
@@ -47,7 +47,7 @@
       </nav>
       <main class="card" >
       <!-- **********EDUCACION********** -->
-        <section class="bg-info-subtle">
+        <section class="bg-warning-subtle">
             <h3 class="text-info-emphasis text-center text-decoration-underline mt-3">Educación</h3>
             <ul class="list">
                 <li class="fw-bold">Inst. San José A-355 (Liniers-Caba)</li>
